# china-data

./: .augment-ignore  .bandit.yaml  .cursorallow  .cursorignore  .cursorindexingignore  .dockerignore  .env.development  .flake8  .gitignore  .markdownlint.json  .mutmut_config  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  .pylintrc  .safety-project.ini  .secrets.baseline  .semgrep.yml  .semgrepignore  CACHE_MANAGEMENT.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_IMPROVEMENTS.md  CI_CD_SETUP.md  CODEBASE_ANALYSIS.md  CODEBASE_ISSUES.md  CODEBASE_REVIEW.md  CODEBASE_REVIEW_CHECKLIST.md  CODEBASE_VIOLATIONS.md  CODEBASE_VIOLATIONS2.md  CODE_IMPROVEMENTS.md  COLUMN_MAPPING_CONSOLIDATION.md  DEPENDENCY_CLEANUP_SUMMARY.md  DEPENDENCY_MIGRATION_GUIDE_2025.md  Dockerfile  GITHUB_ACTIONS_UV_MODERNIZATION_2025.md  GITHUB_CLI_QUICK_REFERENCE.md  LINTING_MODERNIZATION_2025.md  MAKEFILE_TESTING_ISSUES.md  Makefile  PRE_COMMIT_BEST_PRACTICES.md  PRE_COMMIT_CACHING_OPTIMIZATION.md  (+44 more)
.context/: project.yaml
.devcontainer/: README.md  devcontainer.json  launch.json  setup.sh  tasks.json
.github/: CODEOWNERS  auto-assign-config.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  auto-assign.yml  ci-unified.yml  ci-uv.yml  ci.yml  dependency-check.yml  dependency-health.yml  dependency-update.yml  docs.yml  monitoring.yml  performance.yml  release.yml  sbom.yml  security-enhanced.yml  vulnerability-scan.yml
docs/: ai-context.md  index.md  tool-version-synchronization.md
docs/adrs/: 001-python-version-strategy.md  003-documentation-strategy.md  index.md
docs/api/: core.md  data-sources.md
docs/development/: contributing.md  github-actions-guide.md  tool-version-alignment.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/security/: bandit-exclude-patterns.md  semgrep-configuration.md  semgrep-free-account-benefits.md
docs/stylesheets/: extra.css
docs/user-guide/: data-sources.md  output-formats.md  processing-pipeline.md  structured-logging.md
examples/: structured_logging_demo.py
logs/: README.md
model/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  china_growth_model.md  test_model_equations.py
model/parameters_info/: tfp.md
model/utils/: __init__.py  consumption.py  exports.py  imports.py  investment_from_saving.py  tfp_growth.py
output/: china_data_processed.csv  china_data_processed.md  china_data_raw.md
parameters_info/: tfp.md  trade_elasticities.md
scripts/: compliance_report.py  dev-setup.sh  fix_ruamel_namespace.py  generate_sarif_reports.py  sync_tool_versions.py
tests/: TEST_COVERAGE_SUMMARY.md  __init__.py  conftest.py  factories.py  test_dataframe_ops.py  test_downloader.py  test_economic_indicators.py  test_economic_indicators_extra.py  test_factories_demo.py  test_factoryboy_integration.py  test_imf_loader.py  test_integration_processor.py  test_integration_processor_output.py  test_markdown_utils.py  test_path_constants.py  test_performance_regression.py  test_processor.py  test_processor_cli.py  test_processor_cli_validation.py  test_processor_output.py  test_processor_output_formatting.py  test_processor_output_markdown.py  test_property_based.py  test_property_enhanced.py  test_pwt_downloader.py  test_pwt_downloader_extra.py  test_snapshots.py  test_structured_logging.py  test_utils.py  test_wdi_downloader.py  test_wdi_downloader_additional.py
tests/__snapshots__/: test_snapshots.ambr
tests/data_integrity/: test_consistency.py  test_structure.py  test_value_ranges.py
tests/extra/: test_capital_extra.py  test_dataframe_extra.py  test_error_handling_decorators.py
tests/processor/: test_capital.py  test_economic_indicators.py  test_extrapolation.py  test_human_capital.py  test_loading.py  test_output.py  test_processed_properties.py  test_units.py
utils/: __init__.py  caching_utils.py  economic_indicators.py  error_handling.py  logging_config.py  logging_core.py  logging_helpers.py  logging_operations.py  logging_tracing.py  markdown_utils.py  observability.py  path_constants.py  processor_cli.py  processor_extrapolation.py  processor_extrapolation_apply.py  processor_extrapolation_constants.py  processor_extrapolation_prepare.py  processor_extrapolation_utils.py  processor_hc.py  processor_hc_helpers.py  processor_load.py  processor_output.py  processor_units.py  validation_core.py  validation_rules.py  validation_utils.py
utils/capital/: __init__.py  calculation.py  investment.py  projection.py
utils/capital/calculation/: __init__.py  baseline.py  helpers.py  validation.py
utils/capital/projection/: __init__.py  core.py  validation.py
utils/data_sources/: __init__.py  fallback_extractors.py  fallback_loader.py  fallback_parser.py  fallback_utils.py  imf_loader.py  pwt_downloader.py  wdi_downloader.py
utils/economic_indicators/: __init__.py  indicators_calculator.py  tfp_calculator.py
utils/error_handling/: __init__.py  data_operation_decorators.py  decorators.py  decorators_base.py  exceptions.py  retry_and_timing_decorators.py  validators.py
utils/extrapolation_methods/: __init__.py  arima.py  average_growth_rate.py  extrapolation_helpers.py  linear_regression.py
utils/output/: __init__.py  formatters.py  markdown_generator.py  markdown_template.py
utils/processor_dataframe/: __init__.py  merge_operations.py  metadata_operations.py  output_operations.py
workflow_outputs/: bandit-report.json  dependency-tree.txt  flake8-report.txt  outdated-packages.json  workflow-summary.json
