[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "china-data"
requires-python = ">=3.9"
description = "China Economic Data Analysis Pipeline"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fernando Duarte", email = "fernando_duarte@brown.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dynamic = ["version"]
dependencies = [
    "jinja2>=3.1.6,<4.0",
    "numpy>=1.26.4,<2.0",
    "openpyxl>=3.1.2,<4.0",
    "pandas>=2.2.3,<3.0",
    "pandas-datareader>=0.10.0,<1.0",
    "requests>=2.31.0,<3.0",
    "requests-cache>=1.0.0,<2.0",
    "scikit-learn>=1.3.2,<2.0",
    "statsmodels>=0.14.4,<1.0",
    "tabulate>=0.9.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7,<2.0",
    "black>=25.1,<26.0",
    "flake8>=7.0,<8.0",
    "interrogate>=1.7,<2.0",
    "ipython>=8.29,<9.0",
    "isort>=5.13,<6.0",
    "jupyter>=1.1,<2.0",
    "memory-profiler>=0.61,<1.0",
    "mypy>=1.15,<2.0",
    "pandas-stubs>=2.2,<3.0",
    "pip-audit>=2.7,<3.0",
    "pip-licenses>=5.0,<6.0",
    "pipdeptree>=2.23,<3.0",
    "pre-commit>=3.0,<4.0",
    "psutil>=6.1,<7.0",
    "py-spy>=0.3,<1.0",
    "pylint>=3.3,<4.0",
    "pytest>=7.4,<8.0",
    "pytest-benchmark>=4.0,<5.0",
    "pytest-cov>=4.1,<5.0",
    "radon>=6.0,<7.0",
    "requests-cache>=1.2,<2.0",
    "safety>=3.0,<4.0",
    "semgrep>=1.0,<2.0",
    "tabulate>=0.9,<1.0",
    "types-pytz>=2025.2,<2026.0",
    "types-requests>=2.32,<3.0",
]

[tool.uv]
# UV configuration for faster dependency resolution
dev-dependencies = [
    "bandit>=1.7,<2.0",
    "black>=25.1,<26.0",
    "flake8>=7.0,<8.0",
    "interrogate>=1.7,<2.0",
    "ipython>=8.29,<9.0",
    "isort>=5.13,<6.0",
    "jupyter>=1.1,<2.0",
    "memory-profiler>=0.61,<1.0",
    "mypy>=1.15,<2.0",
    "pandas-stubs>=2.2,<3.0",
    "pip-audit>=2.7,<3.0",
    "pip-licenses>=5.0,<6.0",
    "pipdeptree>=2.23,<3.0",
    "pre-commit>=3.0,<4.0",
    "psutil>=6.1,<7.0",
    "py-spy>=0.3,<1.0",
    "pylint>=3.3,<4.0",
    "pytest>=7.4,<8.0",
    "pytest-benchmark>=4.0,<5.0",
    "pytest-cov>=4.1,<5.0",
    "radon>=6.0,<7.0",
    "requests-cache>=1.2,<2.0",
    "safety>=3.0,<4.0",
    "semgrep>=1.0,<2.0",
    "tabulate>=0.9,<1.0",
    "types-pytz>=2025.2,<2026.0",
    "types-requests>=2.32,<3.0",
]

# UV workspace configuration
[tool.uv.workspace]
members = ["."]

# UV dependency resolution configuration
[tool.uv.dependency-metadata]
# Enable faster dependency resolution
resolution-mode = "highest"
# Prefer wheels over source distributions
prefer-binary = true

# UV pip configuration
[tool.uv.pip]
# Use faster index strategy
index-strategy = "unsafe-best-match"
# Enable dependency caching
cache-dir = ".uv-cache"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["venv", ".venv", "__pycache__", ".git", ".mypy_cache", ".pytest_cache"]

[tool.pylint.main]
py-version = "3.9"
ignore = ["venv", ".venv", "__pycache__", ".git", ".mypy_cache", ".pytest_cache"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-locals = 30
max-returns = 12
max-branches = 25
max-statements = 90

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "unused-import",
    "unused-argument",
    "broad-exception-caught",
    "broad-exception-raised",
    "import-outside-toplevel",
    "logging-fstring-interpolation",
    "duplicate-code",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-return-statements",
    "too-many-nested-blocks"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
# Strict mode settings
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
# Additional strict checks
disallow_any_unimported = true
disallow_any_expr = false  # Too strict for practical use
disallow_any_decorated = true
disallow_any_explicit = false  # Allow explicit Any when needed
# Still ignore missing imports for external libraries
ignore_missing_imports = true
exclude = ["venv"]
# Show error codes for easier debugging
show_error_codes = true
# Show column numbers
show_column_numbers = true
# Show absolute paths
show_absolute_path = true
# Enable type checking for test files with relaxed rules
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
disable_error_code = ["misc", "var-annotated", "no-untyped-call", "arg-type", "operator", "unreachable"]

# Relax some checks for decorator modules
[[tool.mypy.overrides]]
module = "utils.error_handling.decorators"
disable_error_code = ["misc", "unreachable"]

# Relax checks for data source modules that use decorators
[[tool.mypy.overrides]]
module = "utils.data_sources.*"
disable_error_code = ["misc"]

# Relax unreachable code warnings for capital modules (false positives)
[[tool.mypy.overrides]]
module = "utils.capital.*"
disable_error_code = ["unreachable"]

# Relax unreachable code warnings for processor modules (false positives)
[[tool.mypy.overrides]]
module = "utils.processor_hc"
disable_error_code = ["unreachable"]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 80
exclude = ["tests", "venv", ".venv", "build", "dist"]
verbose = 2
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
